[package]

name = "stl"
version = "0.1.0"
authors = ["Eric Holk <eric.holk@gmail.com>"]

description = "Stereo Lithography file input and output."
repository = "https://github.com/eholk/rust-stl"
readme = "README.md"

keywords = ["stl", "stereo lithography", "3d", "file format"]

license = "BSD-3-Clause"
